--- a/css/sections.css
+++ b/css/sections.css
@@ -1427,7 +1427,7 @@
 }
 
 .roadmap__step-card h3 {
-    font-family: 'Montserrat';
+    font-family: 'Poppins';
     font-size: 20px;
     font-weight: 800;
     color: #fff;
